Backport fix for bug 168968 to KDE 4.2.1.

BUG:168968

svn path=/branches/KDE/4.2/kdelibs/; revision=921411